# personality

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.md  west.yml
.run/: Board (Debug).run.xml  Personality.run.xml
apps/personality/: CMakeLists.txt  prj.conf
apps/personality/src/: app_core.hpp  cli_shell.cpp  main.cpp  main_host.cpp  sched.cpp
platform/: factory.hpp  platform.hpp
platform/ambiq/: ambiq_platform.hpp  impl_platform.cpp
platform/host/: host_platform.cpp  host_platform.hpp  impl_platform_posix.cpp  impl_platform_win.cpp
toolchain/: apollo3_evb_sbl.ld  arm-gcc.cmake
